# open-cua

./: .env.example  .gitignore  README.md  main.py  ollama_cua.py  openai_cua.py  pyproject.toml  utils.py
agent/: agent.py  model.py  prompts.py  schema.py
computer/: base_computer.py  playwright.py
test/: test_form.html  test_litellm.py  test_playwright.py
utils/: function_parser.py  prompts.py  util.py
