[project]
name = "open-cua"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ollama>=0.6.1",
    "openai>=2.14.0",
    "pillow>=12.0.0",
    "playwright==1.50.0",
    "pydantic>=2.12.5",
    "termcolor>=3.2.0",
]
